# gazetype

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  gazetype.spec  pyproject.toml
.github/workflows/: test.yml
scripts/: build_windows.ps1  download_model.ps1
src/gazetype/: __init__.py  __main__.py  app.py  blink.py  calibration.py  camera_preview.py  input_windows.py  keyboards.py  landing.py  models.py  settings.py  ui.py  vision.py  windows.py
tests/: test_blink.py  test_calibration.py  test_calibration_ui.py  test_camera_preview_ui.py  test_head_motion.py  test_input_windows.py  test_keyboards.py  test_landing.py  test_settings.py  test_vision_pose.py
