[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazetype"
version = "0.1.0"
description = "Windows gaze typing accessibility prototype"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "hydrargyrum13" }]
dependencies = [
  "PySide6>=6.8,<7",
  "opencv-python>=4.10,<5",
  "mediapipe>=0.10.20,<0.11",
  "numpy>=1.26,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "pyinstaller>=6.11,<7",
]

[project.scripts]
gazetype = "gazetype.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gazetype = ["assets/*.task"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

